--- a/cadastro.html
+++ b/cadastro.html
@@ -1,46 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Cadastro</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-container">
-            <img src="imagem1_prof.png" width="400">
-            <div class="header">
-                <h1>Cadastro</h1>
+    <div class="contenção">
+        <div class="cards">
+            <div class="imagem">
+                <img src="cadastro.jpeg" alt="">
             </div>
-            <form>
-                <label for="cpf">Digite o CPF</label>
-                <input type="text" id="cpf" name="cpf" placeholder="Digite o CPF" required>
-                
-                <div class="input-group">
-                    <div>
-                        <label for="user-type">Tipo de usuário</label>
-                        <select id="user-type" name="user-type">
-                            <option value="">Selecione um</option>
-                            <option value="aluno">Aluno</option>
-                            <option value="professor">Professor</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="disciplinas">Disciplinas</label>
-                        <select id="disciplinas" name="disciplinas">
-                            <option value="">Selecione uma</option>
-                            <option value="matematica">Matemática</option>
-                            <option value="portugues">Português</option>
-                        </select>
-                    </div>
-                </div>
-
-                <label for="senha">Crie uma senha</label>
-                <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
-
-                <button type="submit">Cadastrar-se</button>
-            </form>
+           <div class="texto">
+            <h1>cadastro</h1>
+        </div>
+        
         </div>
     </div>
 </body>
